--- a/kafka-compose.yml
+++ b/kafka-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+name: "kafka"
 services:
   zookeeper:
     image: wurstmeister/zookeeper
@@ -6,7 +6,9 @@ services:
     ports:
       - "2181:2181"
     networks:
-      - kafka-net
+      - kafka-network
+      
+      
   kafka:
     image: wurstmeister/kafka
     container_name: kafka
@@ -17,10 +19,11 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
       KAFKA_LISTENERS: INSIDE://0.0.0.0:9092,OUTSIDE://0.0.0.0:9093
       KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-#      KAFKA_CREATE_TOPICS: "createPost"
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181 
     networks:
-      - kafka-net
+      - kafka-network
+
 networks:
-  kafka-net:
+  kafka-network:
+    name: kafka-network
     driver: bridge
