--- a/lab-server-2/src/main/resources/application.yml
+++ b/lab-server-2/src/main/resources/application.yml
@@ -11,10 +11,17 @@ spring:
     password: ${MYSQL_PASSWORD:root}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
+
   kafka:
-    bootstrap-servers: localhost:9092
-    producer:
-      key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+    consumer:
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      bootstrap-servers: localhost:9092
+      properties:
+        spring:
+          json:
+            trusted:
+              packages: '*'
+
 server:
   port: 8090
